--- a/src/eni/seis/theme/theme-east/src/less/pages/communication_and_visibility.less
+++ b/src/eni/seis/theme/theme-east/src/less/pages/communication_and_visibility.less
@@ -1,10 +1,21 @@
 body.template-communication_and_visibility {
+  .jquery-move-me {
+    overflow: overlay;
+    margin-bottom: 1rem;
+  }
+
+  .container-fluid.moved-events {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    background: @color-gray-lighter;
+  }
+
   .page-main {
     width: 100%;
   }
 
   .data-section-aow-slider.row {
-     background: @color-gray-lighter;
+    background: @color-gray-lighter;
   }
 
   #parent-fieldname-description {
@@ -27,6 +38,11 @@ body.template-communication_and_visibility {
 
   .section-frontpage-events {
     margin: 0;
+    .tile {
+      position: relative;
+      left: -1rem;
+    }
+
     .tile:hover > a {
       color: #FFFFFF !important;
     }
@@ -39,6 +55,13 @@ body.template-communication_and_visibility {
       border-bottom: 3px solid #08a8dc;
       display: inline-block;
       padding-right: 1em;
+    }
+
+    a {
+      color: @color-brand-east;
+      &:hover {
+        color: @color-accent !important;
+      }
     }
 
     .knowledge-resources {
@@ -55,10 +78,15 @@ body.template-communication_and_visibility {
         list-style-type: none;
         list-style: none;
         li {
+          display: block;
           list-style: none;
           padding: 0.5em 0 0.5em 0;
           color: @color-brand-east;
           font-size: 120%;
+
+          a {
+            color: @color-brand-east;
+          }
         }
       }
     }
